NEXT-1004 - less fixes

--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-and-container/sw-condition-and-container.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-and-container/sw-condition-and-container.html.twig
@@ -22,7 +22,7 @@
                     </div>
                 {% endblock %}
                 {% block sw_condition_container_actions %}
-                    <div v-if="level !== 0" class="sw-condition-and-container__actions">
+                    <div class="sw-condition-and-container__actions">
                         <sw-button class="sw-condition-and-container__actions--and" @click="onAddAndClick">
                             {{ $tc('global.sw-condition.condition.and') }}
                         </sw-button>
