NEXT-1215 - Use default folder on upload

--- a/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-detail/sw-manufacturer-detail.html.twig
+++ b/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-detail/sw-manufacturer-detail.html.twig
@@ -55,6 +55,7 @@
                                         :allowMultiSelect="false"
                                         variant="regular"
                                         :caption="$tc('sw-manufacturer.detail.addLogoCaption')"
+                                        :defaultFolder="manufacturer.entityName"
                                         @new-uploads-added="onUploadAdded"
                                         @media-upload-success="setMediaItem"
                                         @sw-media-upload-open-sidebar="openMediaSidebar">
