NEXT-1436 - Fix e2e tests

--- a/Resources/administration/src/app/component/form/sw-label/sw-label.html.twig
+++ b/Resources/administration/src/app/component/form/sw-label/sw-label.html.twig
@@ -3,7 +3,7 @@
         @click.stop="$emit('selected')">
         {% block sw_label_text_holder %}
             <slot name="sw_label_text_holder">
-                <span class="sw-label__selection-text">
+                <span class="sw-label__text">
                     {% block sw_label_text %}
                         <slot>
                         </slot>
