NEXT-1319 - Implement property module and property assignment for products

--- a/Resources/administration/src/app/component/base/sw-simple-search-field/sw-simple-search-field.html.twig
+++ b/Resources/administration/src/app/component/base/sw-simple-search-field/sw-simple-search-field.html.twig
@@ -4,6 +4,7 @@
             <sw-field type="text"
                       class="sw-simple-search-field__input"
                       :placeholder="fallbackPlaceholder"
+                      v-on="$listeners"
                       @input="onSearchTermChanged">
             </sw-field>
         {% endblock %}
