--- a/Resources/administration/src/app/component/media/sw-media-media-item/sw-media-media-item.less
+++ b/Resources/administration/src/app/component/media/sw-media-media-item/sw-media-media-item.less
@@ -1,3 +1,5 @@
+@import '~less/mixins';
+
 .sw-media-media-item {
     position: relative;
 
@@ -19,5 +21,9 @@
                 width: 80%;
             }
         }
+    }
+
+    .sw-media-media-item__metadata {
+        .truncate();
     }
 }
