NEXT-1399 - Refactoring sw-field with subcomponents, add sw-number-field for dynamic number input

--- a/Resources/administration/src/app/component/form/sw-confirm-field/sw-confirm-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-confirm-field/sw-confirm-field.html.twig
@@ -3,7 +3,8 @@
         {% block sw_confirm_field_input_field %}
             <sw-field
                 v-model="draft"
-                v-bind="additionalAttributes"
+                type="text"
+                v-bind="$attrs"
                 @focus="onStartEditing"
                 @blur="onBlurField"
                 @keyup.enter="onSubmitFromKey"
