--- a/Resources/administration/src/app/component/form/sw-datepicker/sw-datepicker.html.twig
+++ b/Resources/administration/src/app/component/form/sw-datepicker/sw-datepicker.html.twig
@@ -1,5 +1,6 @@
-{% block sw_datepicker %}
-    <div class="sw-datepicker">
+{% block sw_text_field_input %}
+    <div class="sw-datepicker sw-field__input">
         <input type="text" @input="onInput" ref="flatpickrInput" :placeholder="currentFlatpickrConfig.dateFormat">
+        <sw-field-suffix><sw-icon :name="suffixName"></sw-icon></sw-field-suffix>
     </div>
 {% endblock %}
