--- a/Resources/administration/src/app/component/form/sw-price-field/sw-price-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-price-field/sw-price-field.html.twig
@@ -5,9 +5,8 @@
             <sw-field type="number"
                       :label="$tc('global.sw-price-field.labelPriceGross')"
                       :suffix="currency.symbol"
-                      min="0.00"
-                      step="0.01"
                       :validation="validation"
+                      :min="0"
                       @input="onPriceGrossChange"
                       @change="onPriceGrossChange"
                       v-bind="$attrs"
@@ -26,9 +25,8 @@
             <sw-field type="number"
                       :label="$tc('global.sw-price-field.labelPriceNet')"
                       :suffix="currency.symbol"
-                      min="0.00"
-                      step="0.01"
                       :validation="validation"
+                      :min="0"
                       @input="onPriceNetChange"
                       @change="onPriceNetChange"
                       v-bind="$attrs"
