--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-base/sw-condition-base.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-base/sw-condition-base.html.twig
@@ -5,7 +5,8 @@
         {% block sw_condition_field_condition_select %}
         <select name="name"
                 class="sw-condition-base__field"
-                v-model="condition.type">
+                v-model="condition.type"
+                @change="handleConditionChange">
             {% block sw_condition_field_condition_select_option %}
             <option v-for="(innerCondition, innerConditionType) in ruleConditionService.getConditions()"
                     :selected="innerConditionType === condition.type"
