--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-or-container/sw-condition-or-container.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-or-container/sw-condition-or-container.html.twig
@@ -1,5 +1,5 @@
 {% block sw_condition_container %}
-<div class="sw-condition-or-container " :class="`${containerRowClass} ${firstContainer}`">
+<div class="sw-condition-or-container " :class="`${containerRowClass}`">
     {% block sw_condition_container_content %}
     <div class="sw-condition-or-container__condition-content">
         {% block sw_condition_container_children %}
@@ -23,10 +23,10 @@
         {% endblock %}
         {% block sw_condition_container_actions %}
         <div v-if="level !== 0" class="sw-condition-or-container__actions">
-            <sw-button class="sw-condition-or-container__actions--or" @click="onAddAndClick">
+            <sw-button class="sw-condition-or-container__actions--or" @click="onAddAndClick(condition.id)">
                 {{ $tc('global.sw-condition.condition.or') }}
             </sw-button>
-            <sw-button class="sw-condition-or-container__actions--sub" @click="onAddChildClick">
+            <sw-button class="sw-condition-or-container__actions--sub" @click="onAddChildClick(condition.id)">
                 {{ $tc('global.sw-condition.condition.subCondition') }}
             </sw-button>
             <sw-button class="sw-condition-or-container__actions--delete" @click="onDeleteAll">
