--- a/Resources/administration/src/module/sw-settings-rule/page/sw-settings-rule-detail/sw-settings-rule-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/page/sw-settings-rule-detail/sw-settings-rule-detail.html.twig
@@ -60,10 +60,10 @@
                 {% endblock %}
 
                 {% block sw_settings_rule_detail_conditions_card %}
-                    <sw-card :large="true" :title="$tc('sw-settings-rule.detail.ruleCard')">
+                    <sw-card class="sw-settings-rule-detail__condition_container" :large="true" :title="$tc('sw-settings-rule.detail.ruleCard')">
                         <component v-if="nestedConditions"
                                    is="sw-condition-and-container"
-                                   :condition="nestedConditions[0]"
+                                   :condition="nestedConditions"
                                    :conditionAssociations="conditionAssociations"
                                    :level="0">
                         </component>
