--- a/Resources/administration/src/module/sw-settings-rule/page/sw-settings-rule-list/sw-settings-rule-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/page/sw-settings-rule-list/sw-settings-rule-list.html.twig
@@ -144,7 +144,9 @@
                                                             dataIndex="inactive"
                                                             sortable>
                                                     {% block sw_settings_rule_list_columns_active_label %}
-                                                        <span v-if="item.inactive" class="sw-settings-rule-list-inactive">{{ $tc('sw-settings-rule.list.inactive') }}</span>
+                                                        <span v-if="item.inactive" class="sw-settings-rule-list-inactive">
+                                                            {{ $tc('sw-settings-rule.list.inactive') }}
+                                                        </span>
                                                         <span v-else>{{ $tc('sw-settings-rule.list.active') }}</span>
                                                     {% endblock %}
                                                 </sw-grid-column>
