--- a/Resources/administration/src/app/component/form/sw-select/sw-select.less
+++ b/Resources/administration/src/app/component/form/sw-select/sw-select.less
@@ -91,7 +91,7 @@
         list-style: none;
     }
 
-    .sw-label.is--clickAble {
+    .is--clickAble .sw-label {
         cursor: pointer;
     }
 
@@ -202,7 +202,7 @@
         }
     }
 
-    .is--default {
+    .is--default .sw-label {
         background-color: @sw-select-color-background-default-item;
         color: @sw-select-color-text-default-item;
         border: 1px solid @sw-select-color-border-default-item;
