--- a/Resources/administration/src/app/component/form/sw-tagged-field/sw-tagged-field.less
+++ b/Resources/administration/src/app/component/form/sw-tagged-field/sw-tagged-field.less
@@ -66,10 +66,6 @@
     margin-bottom: 6px;
   }
 
-  .sw-tagged-field__edit-text {
-    outline: none;
-  }
-
   .sw-tagged-field__input {
     display: inline-block;
     min-width: 200px;
@@ -93,8 +89,7 @@
       color: @sw-tagged-field-color-error;
     }
 
-    .sw-tagged-field__inner,
-    .sw-tagged-field__results {
+    .sw-tagged-field__inner {
       border-color: @sw-tagged-field-color-error;
     }
   }
