--- a/Resources/administration/src/app/component/form/sw-select/sw-select.html.twig
+++ b/Resources/administration/src/app/component/form/sw-select/sw-select.html.twig
@@ -23,26 +23,29 @@
                                           tag="ul"
                                           class="sw-select__selections"
                                           mode="out-in">
-
-                            {% block sw_select_selection_item %}
-                                <sw-label :class="{ 'is--default': (selection.id === defaultItemId), 'is--clickAble': (defaultItemId) }"
-                                          v-for="selection in selections"
-                                          :key="selection.id"
-                                          :data-id="selection.id"
-                                          @selected="changeDefaultItemId(selection.id)"
-                                          @dismiss="onDismissSelection(selection.id)">
-                                    <template>
-                                        {% block sw_select_selection_item_text %}
-                                            {{ selection.name }}
-                                        {% endblock %}
-                                    </template>
-                                    <template slot="sw-label__dismiss-icon">
-                                        <sw-icon name="small-default-x-line-medium"
-                                                 :class="{ 'sw-select__item-is--default': (selection.id === defaultItemId) }">
-                                        </sw-icon>
-                                    </template>
-                                </sw-label>
-                            {% endblock %}
+                            <li :class="{ 'is--default': (selection.id === defaultItemId), 'is--clickAble': (defaultItemId) }"
+                                v-for="selection in selections"
+                                :key="selection.id"
+                                :data-id="selection.id">
+                                {% block sw_select_selection_item %}
+                                    <sw-label dismissAble
+                                              @selected="changeDefaultItemId(selection.id)"
+                                              @dismiss="onDismissSelection(selection.id)">
+                                        <template>
+                                            {% block sw_select_selection_item_text %}
+                                                <span class="sw-select__selection-item">
+                                                    {{ selection.name }}
+                                                </span>
+                                            {% endblock %}
+                                        </template>
+                                        <template slot="dismiss_icon">
+                                            <sw-icon name="small-default-x-line-medium"
+                                                     :class="{ 'sw-select__item-is--default': (selection.id === defaultItemId) }">
+                                            </sw-icon>
+                                        </template>
+                                    </sw-label>
+                                {% endblock %}
+                            </li>
 
                             {% block sw_select_list_item_input %}
                                 <li class="sw-select__selection-item-input" key="listInput">
