NEXT-1004 - fix placeholder for first condition container

--- a/Resources/administration/src/module/sw-settings-rule/page/sw-settings-rule-detail/sw-settings-rule-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/page/sw-settings-rule-detail/sw-settings-rule-detail.html.twig
@@ -65,7 +65,8 @@
                                    is="sw-condition-and-container"
                                    :condition="nestedConditions"
                                    :conditionAssociations="conditionAssociations"
-                                   :level="0">
+                                   :level="0"
+                                   ref="mainContainer">
                         </component>
                     </sw-card>
                 {% endblock %}
