--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-different-addresses/sw-condition-different-addresses.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-different-addresses/sw-condition-different-addresses.html.twig
@@ -1,13 +1,13 @@
 {% block sw_condition_fields %}
     {% block sw_condition_fields_operator %}
         <sw-field type="text"
-                  class="field--operator" :placeholder="$tc(operator.label)"
+                  class="field field--select has--arrow" :placeholder="$tc(operator.label)"
                   disabled="true">
         </sw-field>
     {% endblock %}
     {% block sw_condition_fields_value %}
-        <sw-field type="checkbox"
-                  class="field--value is--secondary"
+        <sw-field type="switch"
+                  class="field field--main"
                   v-model="condition.value.isDifferent">
         </sw-field>
     {% endblock %}
