--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-and-container/sw-condition-and-container.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-and-container/sw-condition-and-container.html.twig
@@ -1,5 +1,5 @@
 {% block sw_condition_container %}
-    <div class="sw-condition-and-container" :class="`${containerRowClass}`">
+    <div class="sw-condition-and-container" :class="containerRowClass">
         {% block sw_condition_container_content %}
             <div class="sw-condition-and-container__condition-content">
                 {% block sw_condition_container_children %}
