--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-customer-number/sw-condition-billing-customer-number.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-customer-number/sw-condition-billing-customer-number.html.twig
@@ -3,7 +3,7 @@
         <sw-field type="select"
                   name="operator"
                   v-model="condition.value.operator"
-                  class="field--operator">
+                  class="field field--select has--arrow">
             <template slot="options">
                 <option v-for="operator in operators" :value="operator.identifier">
                     {{ $tc(operator.label) }}
@@ -14,7 +14,7 @@
     {% block sw_condition_fields_value %}
         <sw-condition-value multi
                             :id="condition.id"
-                            class="field--value is--secondary"
+                            class="field field--multi field--main"
                             v-model="condition.value.customerNumbers">
         </sw-condition-value>
     {% endblock %}
