--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-line-item-of-type/sw-condition-line-item-of-type.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-line-item-of-type/sw-condition-line-item-of-type.html.twig
@@ -3,7 +3,7 @@
         <sw-field type="select"
                   name="operator"
                   v-model="condition.value.operator"
-                  class="field--operator">
+                  class="field field--select has--arrow">
             <template slot="options">
                 <option v-for="operator in operators" :value="operator.identifier">
                     {{ $tc(operator.label) }}
@@ -15,7 +15,7 @@
         <sw-field type="select"
                   :name="lineItemType"
                   v-model="condition.value.lineItemType"
-                  class="field--value">
+                  class="field field--main field--select">
             <template slot="options">
                 <option v-for="(lineItemType, identifier) in lineItemTypes" :value="identifier">
                     {{ $tc(lineItemType.label) }}
