--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-or-container/sw-condition-or-container.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-or-container/sw-condition-or-container.html.twig
@@ -1,5 +1,5 @@
 {% block sw_condition_container %}
-<div class="sw-condition-or-container " :class="`${containerRowClass}`">
+<div class="sw-condition-or-container " :class="containerRowClass">
     {% block sw_condition_container_content %}
     <div class="sw-condition-or-container__condition-content">
         {% block sw_condition_container_children %}
