--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-sales-channel/sw-condition-sales-channel.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-sales-channel/sw-condition-sales-channel.html.twig
@@ -3,7 +3,7 @@
         <sw-field type="select"
                   name="operator"
                   v-model="condition.value.operator"
-                  class="field--operator">
+                  class="field field--select has--arrow">
             <template slot="options">
                 <option v-for="operator in operators" :value="operator.identifier">
                     {{ $tc(operator.label) }}
@@ -15,7 +15,7 @@
         <sw-condition-value multi
                             :id="condition.id"
                             :store="getSalesChannelStore()"
-                            class="field--value is--secondary"
+                            class="field field--multi field--main"
                             v-model="condition.value.salesChannelIds">
         </sw-condition-value>
     {% endblock %}
