--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-shipping-street/sw-condition-shipping-street.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-shipping-street/sw-condition-shipping-street.html.twig
@@ -3,7 +3,7 @@
         <sw-field type="select"
                   name="operator"
                   v-model="condition.value.operator"
-                  class="field--operator">
+                  class="field field--select has--arrow">
             <template slot="options">
                 <option v-for="operator in operators" :value="operator.identifier">
                     {{ $tc(operator.label) }}
@@ -12,7 +12,7 @@
         </sw-field>
     {% endblock %}
     {% block sw_condition_fields_value %}
-        <sw-field class="field--value is--secondary"
+        <sw-field class="field field--main"
                   v-model="condition.value.streetName">
         </sw-field>
     {% endblock %}
