--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-is-new-customer/sw-condition-is-new-customer.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-is-new-customer/sw-condition-is-new-customer.html.twig
@@ -3,7 +3,7 @@
         <sw-field type="text"
                   class="field field--select has--arrow"
                   :placeholder="$tc(operator.label)"
-                  disabled="true">
+                  :disabled="true">
         </sw-field>
     {% endblock %}
     {% block sw_condition_fields_value %}
