--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-not-found/sw-condition-not-found.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-not-found/sw-condition-not-found.html.twig
@@ -1,7 +1,7 @@
 {% block sw_condition_fields %}
     {% block sw_condition_fields_value %}
         <sw-field type="text"
-                  class="field--value"
+                  class="field field--main field--error"
                   :placeholder="$tc('global.sw-condition.condition.not-found.label')"
                   :disabled="true">
             <template slot="suffix">
