--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-different-addresses/sw-condition-different-addresses.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-different-addresses/sw-condition-different-addresses.html.twig
@@ -2,7 +2,7 @@
     {% block sw_condition_fields_operator %}
         <sw-field type="text"
                   class="field field--select has--arrow" :placeholder="$tc(operator.label)"
-                  disabled="true">
+                  :disabled="true">
         </sw-field>
     {% endblock %}
     {% block sw_condition_fields_value %}
