--- a/Resources/administration/src/app/component/form/sw-tagged-field/sw-tagged-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-tagged-field/sw-tagged-field.html.twig
@@ -18,7 +18,7 @@
                             <sw-label dismissAble
                                       @dismiss="dismissTag(index)">
                                 <template>
-                                        {{ tag.content }}
+                                        {{ tag }}
                                 </template>
                             </sw-label>
                         </li>
